# lwcli-py

./: .gitignore  LICENSE  README.md  accounts.json  bot.py  example.py  getcode.py  pyproject.toml  relay-client.md  requirements.txt  run.py  swag.json  swagger.json
config/: plugins.json
docs/: architecture.md
lwapi/: __init__.py  client.py  config.py  events_parser.py  events_utils.py  exceptions.py  session.py  sync_utils.py  transport.py  utils.py
lwapi/apis/: __init__.py  events.py  exceptions.py  favor.py  finder.py  friend.py  generated.py  group.py  label.py  login.py  mmsns.py  msg.py  official.py  other.py  relay.py  user.py  utils.py  wxapp.py
lwapi/generators/: swagger_codegen.py
lwapi/models/: __init__.py  base.py  favor_requests.py  friend_requests.py  group_requests.py  json_payload.py  label_requests.py  login.py  msg.py  msg_requests.py  official_requests.py  other_requests.py  relay.py  sns_requests.py  user_requests.py  wxapp_requests.py
lwapi/proto/: addmsg_pb2.py
plugins/: _plugin_patterns.py  lwplugin_ai_reply.py  lwplugin_debug_types.py  lwplugin_demo_helper.py  lwplugin_my_demo.py  lwplugin_my_hello.py  lwplugin_myui.py
proto/: addmsg.proto
src/: __init__.py  account_loader.py  app_paths.py  bot_manager.py  device_id.py  events_lifespan.py  events_message_bridge.py  login_service.py  main.py  message_handler.py  message_inbox.py  qr_printer.py  relay_login_service.py  utils.py
src/plugins/: __init__.py  bot_tasks.py  builtin_debug_types.py  builtin_demo_helper.py  builtin_demo_replies.py  chain.py  panel.py  (+5 more)
tests/: conftest.py
(+21 files in other folders)
